# NITIC-HandsOnDeepLearning

./: .cursorignore  .gitignore  README.md  myst.yml  pyproject.toml  specifications.md
.github/workflows/: deploy-jupyter-book.yml
assets/: fully_connected_layer_calculation.drawio  sidebar_toggles.js
demos/: activation_functions_viewer.html  backward_animation.html  data_split_animation.html  forward_backward_training_animation.html  forward_loss_animation.html  minibatch_animation.html  neuron.html
notebooks/: introduction.md  multi_layer_perceptron.ipynb  numpy_basic_functions.ipynb  numpy_introduction.ipynb  numpy_ufunc.ipynb  python.ipynb  pytorch_introduction.ipynb
notebooks/python_etc/: hanoi.html
scripts/: postprocess_html.py
slides/: hf_trainer.html
styles/: site.css
