[project]
name = "nitic-hands-on-deep-learning"
version = "0.1.0"
description = "NITIC: Hands-on Deep Learning — course materials (Jupyter Book)"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.8",
    "matplotlib-fontja>=1.1.0",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "jupyter-book>=2.1.4",
]
