[project]
name = "nitic-hands-on-deep-learning"
version = "0.1.0"
description = "NITIC: Hands-on Deep Learning — course materials (Jupyter Book)"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "accelerate>=1.13.0",
    "ipython>=9.12.0",
    "japanize-matplotlib>=1.1.3",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.8",
    "matplotlib-fontja>=1.1.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "transformers>=5.8.1",
]

[dependency-groups]
dev = [
    "jupyter-book>=2.1.4",
]
